Find files that are affected by APPSEC-1063, addressing possible SQL injection

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -17,3 +17,4 @@ commands:
     - Elgentos\Magento\Command\Media\Images\DefaultImageCommand
     - Elgentos\Magento\Command\Media\Images\RemoveDuplicatesCommand
     - Elgentos\Magento\Command\Media\Images\RemoveOrphansCommand
+    - Elgentos\Magento\Command\Dev\PossibleSqlInjection
